--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -3,3 +3,13 @@
     font-size: 0.750rem;
     font-family: "Segoe UI";
 }
+
+.recuoleft {
+    margin-left: 1.9rem;
+}
+
+.ui-dialog-titlebar.ui-widget-header {
+    background-color: #4994e4 !important;
+    background: none;
+    color: #f7f7f7;
+   }
