--- a/src/app/sistema/categorias/categoria-lista/categoria-lista.component.html
+++ b/src/app/sistema/categorias/categoria-lista/categoria-lista.component.html
@@ -1,6 +1,6 @@
 <div class="row mb-3">
   <div class="col-md">
-    <h1 class="h2 border-left pl-2">Categorias</h1>
+      <h1 class="h2 border-left">Categorias</h1>
   </div>
   <div class="col-md">
     <button class="btn btn-success float-right" routerLink="/categorias/new"><i class="mr-2 fa fa-plus-square"></i>Nova
