--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,14 +14,24 @@
   background-color: #dfe5ff;
 }
 
+.main div.container-fluid {
+  position: relative;
+  bottom: 10px;
+  padding: 0 10px;
+}
+ 
+
 .ui-blockui.ui-widget-overlay {
-  background-color: inherit;
-  opacity: 1;
+ background-color: rgba(0, 0, 0, 0.10);
 }
 
 #tblCliente .pi.pi-spinner:before {
   content:"\e94a";
   font-size:2.5em;
+}
+
+.ui-table .ui-table-wrapper thead.ui-table-thead > tr {
+line-height: 1.7rem;
 }
 
 .ui-table .ui-table-wrapper thead.ui-table-thead > tr > th {
@@ -30,12 +40,26 @@
 }
 
 .ui-table .ui-table-wrapper tr {
-  line-height: 2.5rem;
+  line-height: 2.1rem;
   color:#23282c;
+    font-family:  Lato, -apple-system, Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
 }
 
 .ui-table .ui-table-tbody > tr {
   background-color: #e4e5e6;
+}
+
+table thead tr {
+  background-color: #529cf3;
+  color: #eaeaea;
+}
+
+table tbody tr {
+  background-color: #eaeaea;
+}
+
+table tbody tr td .btn {
+  min-width: 45px;
 }
 
 div.dataTables_wrapper div.dataTables_filter label, 
@@ -49,6 +73,18 @@ div.dataTables_wrapper div.dataTables_paginate ul.pagination {
   font-size: 0.78rem;
 }
 
+body .ui-datepicker {
+  top: 0 !important;
+}
+
+body .ui-datepicker-title {
+  font-size: 13px;
+}
+
+body .ui-datepicker table tr {
+  font-size: 12px;
+}
+
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: "Titillium Web", sans-serif;
     font-weight: 600;
@@ -59,19 +95,64 @@ h2, .h2 {
     font-size:1.60rem;
 }
 
+.card {
+  background-color: #f1f0fd;
+  margin-bottom: 1rem;
+}
+
 .card-header {
     background-color: #529cf3;
     color: #f2f2f2;
     font-size: 0.95rem;
 }
 
-input.form-control {
+form {
+  font-size:14px;
+}
+
+form label {
+  font-family: Lato, -apple-system, Roboto, "Helvetica Neue", sans-serif;
+  color: #4a5056;
+  margin-bottom: 0.1rem;
+}
+
+form input {
+  font-family: Lato,"Open Sans Pro", sans-serif;
+  border-radius: 6px;
+}
+
+.form-control {
   border-color: #d1d3d6;
+  padding: 0.375rem;
+}
+
+select.form-control {
+  padding-left: 0.2rem;
+}
+
+body  .ui-inputtext.form-control {
+  color: #5c6873;
+  border-color: #d1d3d6;
+} 
+
+body .form-control.ui-inputtext:enabled:hover:not(.ui-state-error) {
+  border-color: #d1d3d6;
+}
+
+.input-group .input-group-text {
+  background-color: #e0e4e6;
+  border: 1px solid #d5d6d8;
 }
 
 .btn {
     font-family: "Titillium Web", sans-serif;
     font-weight: 500;
+    min-width: 110px;
+}
+
+.btn-group .btn {
+  min-width: 45px;
+  font-size: 0.80rem;
 }
 
  button.btn.btn-danger {
