added CoreModule e SharedModule

--- a/src/app/sistema/lancamentos/lancamento-form/lancamento-form.component.html
+++ b/src/app/sistema/lancamentos/lancamento-form/lancamento-form.component.html
@@ -1,8 +1,8 @@
-<div class="row mb-2">
-  <div class="col-md">
-    <h1 class="h2 border-left pl-2">{{pageTitle}}</h1>
+<div class="row mb-3">
+  <div class="col-md-9 col-sm-8 col-7">
+    <h1 class="h2 pl-2">{{pageTitle}}</h1>
   </div>
-  <div class="col-md">
+  <div class="col-md-3 col-sm-4 col-5">
     <button class="btn btn-light float-right" routerLink="/lancamentos"><i class="fa fa-reply mr-2"></i>Voltar</button>
   </div>
 </div>
