--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -92,6 +92,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 h2, .h2 {
+    border-bottom: solid 2px #b9acac;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0;
     font-size:1.60rem;
 }
 
